--- a/ocr_service/dockerfile
+++ b/ocr_service/dockerfile
@@ -1,11 +1,23 @@
 FROM python:3.11-slim
-RUN apt-get update && apt-get install -y tesseract-ocr libtesseract-dev libleptonica-dev \
-    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install flask pillow pytesseract
-COPY app.py /app/app.py
 
+# Instalar Tesseract y dependencias
+RUN apt-get update && apt-get install -y \
+    tesseract-ocr \
+    tesseract-ocr-spa \
+    libtesseract-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copiar requirements
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copiar código
+COPY app.py .
+
+# Exponer puerto
 EXPOSE 5000
+
+# Comando
 CMD ["python", "app.py"]
